feat(m2-c): support proxy replacement and unbind
